--- a/Credit Risk Evaluator.ipynb
+++ b/Credit Risk Evaluator.ipynb
@@ -2,23 +2,245 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from pathlib import Path"
+    "from pathlib import Path\n",
+    "from matplotlib import pyplot as plt\n",
+    "from sklearn.datasets import make_classification\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>index</th>\n",
+       "      <th>loan_amnt</th>\n",
+       "      <th>int_rate</th>\n",
+       "      <th>installment</th>\n",
+       "      <th>home_ownership</th>\n",
+       "      <th>annual_inc</th>\n",
+       "      <th>verification_status</th>\n",
+       "      <th>loan_status</th>\n",
+       "      <th>pymnt_plan</th>\n",
+       "      <th>...</th>\n",
+       "      <th>pct_tl_nvr_dlq</th>\n",
+       "      <th>percent_bc_gt_75</th>\n",
+       "      <th>pub_rec_bankruptcies</th>\n",
+       "      <th>tax_liens</th>\n",
+       "      <th>tot_hi_cred_lim</th>\n",
+       "      <th>total_bal_ex_mort</th>\n",
+       "      <th>total_bc_limit</th>\n",
+       "      <th>total_il_high_credit_limit</th>\n",
+       "      <th>hardship_flag</th>\n",
+       "      <th>debt_settlement_flag</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>67991</td>\n",
+       "      <td>67991</td>\n",
+       "      <td>40000.0</td>\n",
+       "      <td>0.0819</td>\n",
+       "      <td>814.70</td>\n",
+       "      <td>MORTGAGE</td>\n",
+       "      <td>140000.0</td>\n",
+       "      <td>Not Verified</td>\n",
+       "      <td>low_risk</td>\n",
+       "      <td>n</td>\n",
+       "      <td>...</td>\n",
+       "      <td>97.7</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>527975.0</td>\n",
+       "      <td>70914.0</td>\n",
+       "      <td>74600.0</td>\n",
+       "      <td>99475.0</td>\n",
+       "      <td>N</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>25429</td>\n",
+       "      <td>25429</td>\n",
+       "      <td>6000.0</td>\n",
+       "      <td>0.1524</td>\n",
+       "      <td>208.70</td>\n",
+       "      <td>RENT</td>\n",
+       "      <td>55000.0</td>\n",
+       "      <td>Not Verified</td>\n",
+       "      <td>low_risk</td>\n",
+       "      <td>n</td>\n",
+       "      <td>...</td>\n",
+       "      <td>66.7</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>34628.0</td>\n",
+       "      <td>23460.0</td>\n",
+       "      <td>5900.0</td>\n",
+       "      <td>23628.0</td>\n",
+       "      <td>N</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>38496</td>\n",
+       "      <td>38496</td>\n",
+       "      <td>3600.0</td>\n",
+       "      <td>0.1695</td>\n",
+       "      <td>128.27</td>\n",
+       "      <td>RENT</td>\n",
+       "      <td>42000.0</td>\n",
+       "      <td>Not Verified</td>\n",
+       "      <td>low_risk</td>\n",
+       "      <td>n</td>\n",
+       "      <td>...</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>23100.0</td>\n",
+       "      <td>19183.0</td>\n",
+       "      <td>7300.0</td>\n",
+       "      <td>15000.0</td>\n",
+       "      <td>N</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>19667</td>\n",
+       "      <td>19667</td>\n",
+       "      <td>20000.0</td>\n",
+       "      <td>0.1524</td>\n",
+       "      <td>478.33</td>\n",
+       "      <td>RENT</td>\n",
+       "      <td>100000.0</td>\n",
+       "      <td>Not Verified</td>\n",
+       "      <td>low_risk</td>\n",
+       "      <td>n</td>\n",
+       "      <td>...</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>56481.0</td>\n",
+       "      <td>43817.0</td>\n",
+       "      <td>13800.0</td>\n",
+       "      <td>35981.0</td>\n",
+       "      <td>N</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>37505</td>\n",
+       "      <td>37505</td>\n",
+       "      <td>3600.0</td>\n",
+       "      <td>0.1240</td>\n",
+       "      <td>120.27</td>\n",
+       "      <td>RENT</td>\n",
+       "      <td>50000.0</td>\n",
+       "      <td>Not Verified</td>\n",
+       "      <td>low_risk</td>\n",
+       "      <td>n</td>\n",
+       "      <td>...</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>45977.0</td>\n",
+       "      <td>32448.0</td>\n",
+       "      <td>21000.0</td>\n",
+       "      <td>24977.0</td>\n",
+       "      <td>N</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 86 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0  index  loan_amnt  int_rate  installment home_ownership  \\\n",
+       "0       67991  67991    40000.0    0.0819       814.70       MORTGAGE   \n",
+       "1       25429  25429     6000.0    0.1524       208.70           RENT   \n",
+       "2       38496  38496     3600.0    0.1695       128.27           RENT   \n",
+       "3       19667  19667    20000.0    0.1524       478.33           RENT   \n",
+       "4       37505  37505     3600.0    0.1240       120.27           RENT   \n",
+       "\n",
+       "   annual_inc verification_status loan_status pymnt_plan  ...  pct_tl_nvr_dlq  \\\n",
+       "0    140000.0        Not Verified    low_risk          n  ...            97.7   \n",
+       "1     55000.0        Not Verified    low_risk          n  ...            66.7   \n",
+       "2     42000.0        Not Verified    low_risk          n  ...           100.0   \n",
+       "3    100000.0        Not Verified    low_risk          n  ...           100.0   \n",
+       "4     50000.0        Not Verified    low_risk          n  ...           100.0   \n",
+       "\n",
+       "   percent_bc_gt_75  pub_rec_bankruptcies  tax_liens  tot_hi_cred_lim  \\\n",
+       "0               0.0                   0.0        0.0         527975.0   \n",
+       "1               0.0                   0.0        0.0          34628.0   \n",
+       "2               0.0                   0.0        0.0          23100.0   \n",
+       "3              50.0                   0.0        0.0          56481.0   \n",
+       "4              25.0                   0.0        0.0          45977.0   \n",
+       "\n",
+       "   total_bal_ex_mort  total_bc_limit total_il_high_credit_limit  \\\n",
+       "0            70914.0         74600.0                    99475.0   \n",
+       "1            23460.0          5900.0                    23628.0   \n",
+       "2            19183.0          7300.0                    15000.0   \n",
+       "3            43817.0         13800.0                    35981.0   \n",
+       "4            32448.0         21000.0                    24977.0   \n",
+       "\n",
+       "   hardship_flag  debt_settlement_flag  \n",
+       "0              N                     N  \n",
+       "1              N                     N  \n",
+       "2              N                     N  \n",
+       "3              N                     N  \n",
+       "4              N                     N  \n",
+       "\n",
+       "[5 rows x 86 columns]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "train_df = pd.read_csv(Path('Resources/2019loans.csv'))\n",
-    "test_df = pd.read_csv(Path('Resources/2020Q1loans.csv'))"
+    "test_df = pd.read_csv(Path('Resources/2020Q1loans.csv'))\n",
+    "train_df.count()\n",
+    "test_df.head()"
    ]
   },
   {
@@ -27,7 +249,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Convert categorical data to numeric and separate target feature for training data"
+    "# Convert categorical data to numeric and separate target feature for training data\n",
+    "cvrted_train=pd.get_dummies(train_df)\n",
+    "X_train_df=cvrted_train.drop('loan_status_low_risk', axis=1)\n",
+    "X=X_train_df.drop('loan_status_high_risk',axis=1)\n",
+    "y"
    ]
   },
   {
