--- a/Credit Risk Evaluator.ipynb
+++ b/Credit Risk Evaluator.ipynb
@@ -245,15 +245,452 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>loan_amnt</th>\n",
+       "      <th>int_rate</th>\n",
+       "      <th>installment</th>\n",
+       "      <th>home_ownership</th>\n",
+       "      <th>annual_inc</th>\n",
+       "      <th>verification_status</th>\n",
+       "      <th>loan_status</th>\n",
+       "      <th>pymnt_plan</th>\n",
+       "      <th>dti</th>\n",
+       "      <th>delinq_2yrs</th>\n",
+       "      <th>...</th>\n",
+       "      <th>pct_tl_nvr_dlq</th>\n",
+       "      <th>percent_bc_gt_75</th>\n",
+       "      <th>pub_rec_bankruptcies</th>\n",
+       "      <th>tax_liens</th>\n",
+       "      <th>tot_hi_cred_lim</th>\n",
+       "      <th>total_bal_ex_mort</th>\n",
+       "      <th>total_bc_limit</th>\n",
+       "      <th>total_il_high_credit_limit</th>\n",
+       "      <th>hardship_flag</th>\n",
+       "      <th>debt_settlement_flag</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>13375.0</td>\n",
+       "      <td>0.1797</td>\n",
+       "      <td>483.34</td>\n",
+       "      <td>MORTGAGE</td>\n",
+       "      <td>223000.0</td>\n",
+       "      <td>Not Verified</td>\n",
+       "      <td>low_risk</td>\n",
+       "      <td>n</td>\n",
+       "      <td>29.99</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>577150.0</td>\n",
+       "      <td>122018.0</td>\n",
+       "      <td>32000.0</td>\n",
+       "      <td>170200.0</td>\n",
+       "      <td>N</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>21000.0</td>\n",
+       "      <td>0.1308</td>\n",
+       "      <td>478.68</td>\n",
+       "      <td>MORTGAGE</td>\n",
+       "      <td>123000.0</td>\n",
+       "      <td>Source Verified</td>\n",
+       "      <td>low_risk</td>\n",
+       "      <td>n</td>\n",
+       "      <td>11.26</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>85.0</td>\n",
+       "      <td>33.3</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>132750.0</td>\n",
+       "      <td>27896.0</td>\n",
+       "      <td>15900.0</td>\n",
+       "      <td>35398.0</td>\n",
+       "      <td>N</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>20000.0</td>\n",
+       "      <td>0.1240</td>\n",
+       "      <td>448.95</td>\n",
+       "      <td>MORTGAGE</td>\n",
+       "      <td>197000.0</td>\n",
+       "      <td>Source Verified</td>\n",
+       "      <td>low_risk</td>\n",
+       "      <td>n</td>\n",
+       "      <td>11.28</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>85.7</td>\n",
+       "      <td>33.3</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>628160.0</td>\n",
+       "      <td>114043.0</td>\n",
+       "      <td>22600.0</td>\n",
+       "      <td>90340.0</td>\n",
+       "      <td>N</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3000.0</td>\n",
+       "      <td>0.1240</td>\n",
+       "      <td>100.22</td>\n",
+       "      <td>RENT</td>\n",
+       "      <td>45000.0</td>\n",
+       "      <td>Not Verified</td>\n",
+       "      <td>low_risk</td>\n",
+       "      <td>n</td>\n",
+       "      <td>18.08</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>16.7</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>42006.0</td>\n",
+       "      <td>20761.0</td>\n",
+       "      <td>19900.0</td>\n",
+       "      <td>15406.0</td>\n",
+       "      <td>N</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>30000.0</td>\n",
+       "      <td>0.1612</td>\n",
+       "      <td>1056.49</td>\n",
+       "      <td>MORTGAGE</td>\n",
+       "      <td>133000.0</td>\n",
+       "      <td>Source Verified</td>\n",
+       "      <td>low_risk</td>\n",
+       "      <td>n</td>\n",
+       "      <td>27.77</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>66.7</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>283248.0</td>\n",
+       "      <td>109056.0</td>\n",
+       "      <td>79500.0</td>\n",
+       "      <td>58778.0</td>\n",
+       "      <td>N</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 84 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   loan_amnt  int_rate  installment home_ownership  annual_inc  \\\n",
+       "0    13375.0    0.1797       483.34       MORTGAGE    223000.0   \n",
+       "1    21000.0    0.1308       478.68       MORTGAGE    123000.0   \n",
+       "2    20000.0    0.1240       448.95       MORTGAGE    197000.0   \n",
+       "3     3000.0    0.1240       100.22           RENT     45000.0   \n",
+       "4    30000.0    0.1612      1056.49       MORTGAGE    133000.0   \n",
+       "\n",
+       "  verification_status loan_status pymnt_plan    dti  delinq_2yrs  ...  \\\n",
+       "0        Not Verified    low_risk          n  29.99          0.0  ...   \n",
+       "1     Source Verified    low_risk          n  11.26          2.0  ...   \n",
+       "2     Source Verified    low_risk          n  11.28          0.0  ...   \n",
+       "3        Not Verified    low_risk          n  18.08          0.0  ...   \n",
+       "4     Source Verified    low_risk          n  27.77          0.0  ...   \n",
+       "\n",
+       "   pct_tl_nvr_dlq  percent_bc_gt_75  pub_rec_bankruptcies  tax_liens  \\\n",
+       "0           100.0              50.0                   0.0        0.0   \n",
+       "1            85.0              33.3                   0.0        0.0   \n",
+       "2            85.7              33.3                   0.0        0.0   \n",
+       "3           100.0              16.7                   1.0        0.0   \n",
+       "4           100.0              66.7                   0.0        0.0   \n",
+       "\n",
+       "   tot_hi_cred_lim total_bal_ex_mort  total_bc_limit  \\\n",
+       "0         577150.0          122018.0         32000.0   \n",
+       "1         132750.0           27896.0         15900.0   \n",
+       "2         628160.0          114043.0         22600.0   \n",
+       "3          42006.0           20761.0         19900.0   \n",
+       "4         283248.0          109056.0         79500.0   \n",
+       "\n",
+       "   total_il_high_credit_limit  hardship_flag  debt_settlement_flag  \n",
+       "0                    170200.0              N                     N  \n",
+       "1                     35398.0              N                     N  \n",
+       "2                     90340.0              N                     N  \n",
+       "3                     15406.0              N                     N  \n",
+       "4                     58778.0              N                     N  \n",
+       "\n",
+       "[5 rows x 84 columns]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Convert categorical data to numeric and separate target feature for training data\n",
-    "cvrted_train=pd.get_dummies(train_df)\n",
-    "X_train_df=cvrted_train.drop('loan_status_low_risk', axis=1)\n",
-    "X=X_train_df.drop('loan_status_high_risk',axis=1)\n",
-    "y"
+    "cvrted_train_df=train_df.drop(columns=['Unnamed: 0', 'index'])\n",
+    "cvrted_train_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>loan_amnt</th>\n",
+       "      <th>int_rate</th>\n",
+       "      <th>installment</th>\n",
+       "      <th>home_ownership</th>\n",
+       "      <th>annual_inc</th>\n",
+       "      <th>verification_status</th>\n",
+       "      <th>loan_status</th>\n",
+       "      <th>pymnt_plan</th>\n",
+       "      <th>dti</th>\n",
+       "      <th>delinq_2yrs</th>\n",
+       "      <th>...</th>\n",
+       "      <th>pct_tl_nvr_dlq</th>\n",
+       "      <th>percent_bc_gt_75</th>\n",
+       "      <th>pub_rec_bankruptcies</th>\n",
+       "      <th>tax_liens</th>\n",
+       "      <th>tot_hi_cred_lim</th>\n",
+       "      <th>total_bal_ex_mort</th>\n",
+       "      <th>total_bc_limit</th>\n",
+       "      <th>total_il_high_credit_limit</th>\n",
+       "      <th>hardship_flag</th>\n",
+       "      <th>debt_settlement_flag</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>40000.0</td>\n",
+       "      <td>0.0819</td>\n",
+       "      <td>814.70</td>\n",
+       "      <td>MORTGAGE</td>\n",
+       "      <td>140000.0</td>\n",
+       "      <td>Not Verified</td>\n",
+       "      <td>low_risk</td>\n",
+       "      <td>n</td>\n",
+       "      <td>19.75</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>97.7</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>527975.0</td>\n",
+       "      <td>70914.0</td>\n",
+       "      <td>74600.0</td>\n",
+       "      <td>99475.0</td>\n",
+       "      <td>N</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>6000.0</td>\n",
+       "      <td>0.1524</td>\n",
+       "      <td>208.70</td>\n",
+       "      <td>RENT</td>\n",
+       "      <td>55000.0</td>\n",
+       "      <td>Not Verified</td>\n",
+       "      <td>low_risk</td>\n",
+       "      <td>n</td>\n",
+       "      <td>11.52</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>66.7</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>34628.0</td>\n",
+       "      <td>23460.0</td>\n",
+       "      <td>5900.0</td>\n",
+       "      <td>23628.0</td>\n",
+       "      <td>N</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3600.0</td>\n",
+       "      <td>0.1695</td>\n",
+       "      <td>128.27</td>\n",
+       "      <td>RENT</td>\n",
+       "      <td>42000.0</td>\n",
+       "      <td>Not Verified</td>\n",
+       "      <td>low_risk</td>\n",
+       "      <td>n</td>\n",
+       "      <td>6.74</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>23100.0</td>\n",
+       "      <td>19183.0</td>\n",
+       "      <td>7300.0</td>\n",
+       "      <td>15000.0</td>\n",
+       "      <td>N</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>20000.0</td>\n",
+       "      <td>0.1524</td>\n",
+       "      <td>478.33</td>\n",
+       "      <td>RENT</td>\n",
+       "      <td>100000.0</td>\n",
+       "      <td>Not Verified</td>\n",
+       "      <td>low_risk</td>\n",
+       "      <td>n</td>\n",
+       "      <td>12.13</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>56481.0</td>\n",
+       "      <td>43817.0</td>\n",
+       "      <td>13800.0</td>\n",
+       "      <td>35981.0</td>\n",
+       "      <td>N</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>3600.0</td>\n",
+       "      <td>0.1240</td>\n",
+       "      <td>120.27</td>\n",
+       "      <td>RENT</td>\n",
+       "      <td>50000.0</td>\n",
+       "      <td>Not Verified</td>\n",
+       "      <td>low_risk</td>\n",
+       "      <td>n</td>\n",
+       "      <td>16.08</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>45977.0</td>\n",
+       "      <td>32448.0</td>\n",
+       "      <td>21000.0</td>\n",
+       "      <td>24977.0</td>\n",
+       "      <td>N</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 84 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   loan_amnt  int_rate  installment home_ownership  annual_inc  \\\n",
+       "0    40000.0    0.0819       814.70       MORTGAGE    140000.0   \n",
+       "1     6000.0    0.1524       208.70           RENT     55000.0   \n",
+       "2     3600.0    0.1695       128.27           RENT     42000.0   \n",
+       "3    20000.0    0.1524       478.33           RENT    100000.0   \n",
+       "4     3600.0    0.1240       120.27           RENT     50000.0   \n",
+       "\n",
+       "  verification_status loan_status pymnt_plan    dti  delinq_2yrs  ...  \\\n",
+       "0        Not Verified    low_risk          n  19.75          0.0  ...   \n",
+       "1        Not Verified    low_risk          n  11.52          2.0  ...   \n",
+       "2        Not Verified    low_risk          n   6.74          0.0  ...   \n",
+       "3        Not Verified    low_risk          n  12.13          0.0  ...   \n",
+       "4        Not Verified    low_risk          n  16.08          0.0  ...   \n",
+       "\n",
+       "   pct_tl_nvr_dlq  percent_bc_gt_75  pub_rec_bankruptcies  tax_liens  \\\n",
+       "0            97.7               0.0                   0.0        0.0   \n",
+       "1            66.7               0.0                   0.0        0.0   \n",
+       "2           100.0               0.0                   0.0        0.0   \n",
+       "3           100.0              50.0                   0.0        0.0   \n",
+       "4           100.0              25.0                   0.0        0.0   \n",
+       "\n",
+       "   tot_hi_cred_lim total_bal_ex_mort  total_bc_limit  \\\n",
+       "0         527975.0           70914.0         74600.0   \n",
+       "1          34628.0           23460.0          5900.0   \n",
+       "2          23100.0           19183.0          7300.0   \n",
+       "3          56481.0           43817.0         13800.0   \n",
+       "4          45977.0           32448.0         21000.0   \n",
+       "\n",
+       "   total_il_high_credit_limit  hardship_flag  debt_settlement_flag  \n",
+       "0                     99475.0              N                     N  \n",
+       "1                     23628.0              N                     N  \n",
+       "2                     15000.0              N                     N  \n",
+       "3                     35981.0              N                     N  \n",
+       "4                     24977.0              N                     N  \n",
+       "\n",
+       "[5 rows x 84 columns]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Convert categorical data to numeric and separate target feature for testing data\n",
+    "cvrted_test_df=test_df.drop(columns=['Unnamed: 0', 'index'])\n",
+    "cvrted_test_df.head()"
    ]
   },
   {
@@ -262,16 +699,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Convert categorical data to numeric and separate target feature for testing data"
+    "X_train_raw = cvrted_train_df.drop('loan_status', axis=1)\n",
+    "Y_train_raw = cvrted_train_df['loan_status']\n",
+    "X_test_raw = cvrted_train_df.drop('loan_status', axis = 1)\n",
+    "Y_test_raw = cvrted_train_df['loan_status']\n",
+    "X_train_raw.shape, Y_train_raw.shape,"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# add missing dummy variables to testing set"
+    "# add missing dummy variables to testing set\n"
    ]
   },
   {
