--- a/Credit Risk Evaluator.ipynb
+++ b/Credit Risk Evaluator.ipynb
@@ -695,24 +695,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((12180, 83), (12180,), (4702, 83), (4702,))"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "X_train_raw = cvrted_train_df.drop('loan_status', axis=1)\n",
     "Y_train_raw = cvrted_train_df['loan_status']\n",
-    "X_test_raw = cvrted_train_df.drop('loan_status', axis = 1)\n",
-    "Y_test_raw = cvrted_train_df['loan_status']\n",
-    "X_train_raw.shape, Y_train_raw.shape,"
+    "X_test_raw = cvrted_test_df.drop('loan_status', axis = 1)\n",
+    "Y_test_raw = cvrted_test_df['loan_status']\n",
+    "X_train_raw.shape, Y_train_raw.shape,X_test_raw.shape, Y_test_raw.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((12180, 85), (4702, 84))"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# add missing dummy variables to testing set\n"
+    "X_train = pd.get_dummies(X_train_raw, drop_first = True)\n",
+    "Y_train = Y_train_raw.replace({'low_risk':0, 'high_risk':1})\n",
+    "\n",
+    "X_test = pd.get_dummies(X_test_raw, drop_first = True)\n",
+    "Y_train = Y_train_raw.replace ({'low_risk':0, 'high_risk':1})\n",
+    "\n",
+    "X_train.shape, X_test.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "85 85\n"
+     ]
+    }
+   ],
+   "source": [
+    "# add missing dummy variables to testing set\n",
+    "missing_cols=[]\n",
+    "for col in X_train.columns:\n",
+    "    if col not in X_test.columns:\n",
+    "        X_test[col]=0\n",
+    "        missing_cols.append(col)\n",
+    "        \n",
+    "print(len(X_train.columns),len(X_test.columns))"
    ]
   },
   {
