--- a/Credit Risk Evaluator.ipynb
+++ b/Credit Risk Evaluator.ipynb
@@ -719,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -728,7 +728,7 @@
        "((12180, 85), (4702, 84))"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -738,14 +738,14 @@
     "Y_train = Y_train_raw.replace({'low_risk':0, 'high_risk':1})\n",
     "\n",
     "X_test = pd.get_dummies(X_test_raw, drop_first = True)\n",
-    "Y_train = Y_train_raw.replace ({'low_risk':0, 'high_risk':1})\n",
+    "Y_test = Y_test_raw.replace ({'low_risk':0, 'high_risk':1})\n",
     "\n",
     "X_train.shape, X_test.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -769,11 +769,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training Data: 0.649671592775041\n",
+      "Testing Data: 0.5159506592939175\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Nate\\anaconda3\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:763: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Train the Logistic Regression model on the unscaled data and print the model score\n",
+    "logistic= LogisticRegression(solver='lbfgs',random_state = 1)\n",
+    "logistic.fit(X_train,Y_train)\n",
+    "print(f\"Training Data: {logistic.score(X_train, Y_train)}\")\n",
+    "print(f\"Testing Data: {logistic.score(X_test, Y_test)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training Score: 1.0\n",
+      "Testing Score: 0.6405784772437261\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Train a Random Forest Classifier model and print the model score\n",
+    "randomforest= RandomForestClassifier(random_state=1)\n",
+    "randomforest.fit(X_train, Y_train)\n",
+    "print(f'Training Score: {randomforest.score(X_train,Y_train)}')\n",
+    "print(f'Testing Score: {randomforest.score(X_test, Y_test)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Train the Logistic Regression model on the unscaled data and print the model score"
+    "# Scale the data\n",
+    "scale= StandardScaler().fit(X_train)\n",
+    "X_train_scaled = scale.transform(X_train)\n",
+    "X_test_scaled = scale.transform(X_test)"
    ]
   },
   {
@@ -782,25 +843,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Train a Random Forest Classifier model and print the model score"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Scale the data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Train the Logistic Regression model on the scaled data and print the model score"
+    "# Train the Logistic Regression model on the scaled data and print the model score\n",
+    "logistic_scaled= LogisticRegression(solver= 'lbfgs', random_state=1)\n",
+    "logistic_scaled.fit(X_train_scaled, Y_train)\n",
+    "print(f'Scaled Training Data Score: {logistic_scaled.score(X_train_scaled,Y_train)}')\n",
+    "print(f'Scaled Testing Data Score: {logistic_scaled.score(X_test_scaled)})"
    ]
   },
   {
