--- a/Credit Risk Evaluator.ipynb
+++ b/Credit Risk Evaluator.ipynb
@@ -839,15 +839,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Scaled Training Data Score: 0.7083743842364532\n",
+      "Scaled Testing Data Score: 0.7681837515950659\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Nate\\anaconda3\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:763: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n"
+     ]
+    }
+   ],
    "source": [
     "# Train the Logistic Regression model on the scaled data and print the model score\n",
     "logistic_scaled= LogisticRegression(solver= 'lbfgs', random_state=1)\n",
     "logistic_scaled.fit(X_train_scaled, Y_train)\n",
     "print(f'Scaled Training Data Score: {logistic_scaled.score(X_train_scaled,Y_train)}')\n",
-    "print(f'Scaled Testing Data Score: {logistic_scaled.score(X_test_scaled)})"
+    "print(f'Scaled Testing Data Score: {logistic_scaled.score(X_test_scaled, Y_test)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random Forest Training Score: 1.0\n",
+      "Random Forest Testing Score: 0.6405784772437261\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Train a Random Forest Classifier model on the scaled data and print the model score\n",
+    "forest = RandomForestClassifier(random_state = 1, n_estimators=500).fit(X_train_scaled, Y_train)\n",
+    "print(f'Random Forest Training Score: {forest.score(X_train_scaled, Y_train)}')\n",
+    "print(f'Random Forest Testing Score: {forest.score(X_test_scaled, Y_test)}')\n"
    ]
   },
   {
@@ -855,9 +899,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Train a Random Forest Classifier model on the scaled data and print the model score"
-   ]
+   "source": []
   }
  ],
  "metadata": {
